Removed Permsize as obsolete. Now builds against stable spigot. Upgrade env variable added.